Most action of store but edit compelete

--- a/app/views/foodorder/order.twig
+++ b/app/views/foodorder/order.twig
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
     </div>
     <div id="content">
         <div id="cart">
-        {{ include ('cart.twig')}}
+        {{ include ('foodorder/cart.twig')}}
         </div>
         <div class="accordian">
             {% for o in orders %}
